[#6] implement FriendController
